# chatcc

./: .gitignore  IDEA.md  README.md  pyproject.toml  解决.md
docs/: agent_architecture_design.md  architecture.md  claude-agent-sdk.md  implementation-plan.md  p3-implementation-plan.md  rich-message-adoption-design.md
docs/plans/: 2026-03-28-approval-generalize.md  2026-03-28-service-smart-startup-plan.md  2026-03-28-service-smart-startup.md  2026-03-28-session-compress-on-rotate.md
docs/plans/done/: 2026-03-28-approval-generalize.md  2026-03-28-service-smart-startup-plan.md  2026-03-28-service-smart-startup.md  2026-03-28-session-compress-on-rotate.md  2026-03-28-wecom-channel.md
scripts/: test_resume_session.py
src/chatcc/: __init__.py  app.py  config.py  main.py
tests/: test_app_integration.py  test_approval.py  test_approval_integration.py  test_channel_base.py  test_channel_cli.py  test_channel_factory.py  test_channel_feishu.py  test_channel_setup.py  test_channel_telegram.py  test_channel_wecom.py  test_claude_session.py  test_cli_auth.py  test_compose.py  test_compress.py  test_config.py  test_confirm.py  test_cost.py  test_detector.py  test_dispatcher.py  test_events.py  test_history.py  test_longterm.py  test_message.py  test_project_manager.py  test_project_models.py  test_prompt.py  test_provider.py  test_risk.py  test_router.py  test_service_manager.py  test_session_log.py  test_setup_ui.py  test_summary.py  test_task_manager.py  test_tools_command.py  test_tools_install.py  test_tools_project.py  test_tools_service.py  test_tools_session.py
(+47 files in other folders)
