[project]
name = "chatcc"
version = "0.1.0"
description = "IM-controlled Claude Code orchestration system"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "claude-agent-sdk",
    "pyyaml",
    "python-telegram-bot",
    "lark-oapi",
    "click",
]

[project.scripts]
chatcc = "chatcc.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatcc"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
